fixed alignment of h1 & h2 on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,7 +423,7 @@ p {
 .hero-content h1 {
   font-size: 48px;
   font-weight: 500;
-  margin-left: 25px;
+ 
   margin-bottom: 10px;
   text-transform: uppercase;
   text-align: center;
@@ -435,7 +435,7 @@ p {
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 10px;
-  margin-left: 2rem;
+  
   color: #fff;
   letter-spacing: 8px;
   text-align: center;
